joke-platform/infrastructure/kubernetes/base/deployment-joke-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joke-generator
  namespace: joke-platform
  labels:
    app.kubernetes.io/name: joke-generator
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: joke-platform
    app.kubernetes.io/version: "0.0.1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: joke-generator
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: joke-generator
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: joke-platform
        app.kubernetes.io/version: "0.0.1"
    spec:
      containers:
      - name: joke-generator
        image: harbor.bcp.education/joke-platform/joke-generator:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8081
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 384Mi
          limits:
            cpu: 500m
            memory: 768Mi
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: http
          initialDelaySeconds: 20
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 10"]
      terminationGracePeriodSeconds: 30
